--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,36 @@ body {
     position: relative;
 }
 
+/* HEADER 
+-------------------------------------------------- */
+.header-title {
+    color: white !important;
+    text-shadow: 0px 0px 0px #1C1C1C, 1px 1px 1px #1C1C1C, 2px 2px 2px #1C1C1C, 2px 2px 3px #1C1C1C;
+}
+
+/* CLASSES 
+-------------------------------------------------- */
+img.grayscale {
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
+ /* For Webkit browsers */
+    filter: gray;
+ /* For IE 6 - 9 */
+    -webkit-transition: all .6s ease;
+ /* Fade to color for Chrome and Safari */
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+ /* Firefox 10+, Firefox on Android */;
+}
+
+img.grayscale:hover {
+    filter: grayscale(0%);
+    -webkit-filter: grayscale(0%);
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
+}
+
+.col-xs-6 p {
+    min-height: 80px;
+}
 
 
 /* MARKETING CONTENT
