--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,11 @@ body {
     position: relative;
 }
 
+.anchor {
+    padding-top:40px;
+    margin-top:-40px;
+}
+
 /* HEADER 
 -------------------------------------------------- */
 .header-title {
