--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 body {
     padding-top: 50px;
-    padding-bottom: 20px;
+    padding-bottom: 0px;
 }
 
 img {
@@ -48,6 +48,7 @@ p > span {
     width:  auto;
     top:  0;
     left: 0;
+    position: absolute;
 }
 
 .phone-container {
@@ -56,8 +57,8 @@ p > span {
 }
 
 .anchor {
-    padding-top:40px;
-    margin-top:-40px;
+    padding-top:50px;
+    margin-top:-50px;
 }
 
 /* HEADER 
@@ -92,6 +93,7 @@ img.grayscale:hover {
 }
 
 
+
 /* MARKETING CONTENT
 -------------------------------------------------- */
 
@@ -121,6 +123,16 @@ img.grayscale:hover {
     font-weight: 300;
     line-height: 1;
     letter-spacing: -1px;
+}
+
+footer {
+    background-color: #f5f5f5;
+    margin-top: 30px;
+    width: 100%;
+    height: 60px;
+    line-height: 50px;
+    text-align: center;
+    font-weight: bold;
 }
 
 
