--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,16 @@ img.grayscale {
  /* Firefox 10+, Firefox on Android */;
 }
 
+img.character-img {
+    width: 70%;
+    max-width: 200px;
+
+}
+
+.class-desc {
+    min-height: 410px !important;
+}
+
 img.grayscale:hover {
     filter: grayscale(0%);
     -webkit-filter: grayscale(0%);
@@ -125,6 +135,10 @@ img.grayscale:hover {
     letter-spacing: -1px;
 }
 
+img.feature-image {
+    max-width: 100% !important;
+}
+
 footer {
     background-color: #f5f5f5;
     margin-top: 30px;
@@ -138,6 +152,21 @@ footer {
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
+
+@media (max-width: 1000px) {
+
+    #phone-container {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+
+    #tagline {
+        color: black;
+    }
+}
+
 
 @media (min-width: 768px) {
     /* Navbar positioning foo */
@@ -167,6 +196,10 @@ footer {
 
     .featurette-heading {
         font-size: 50px;
+    }
+
+    #tagline {
+        color: white;
     }
 }
 
